python/tests/gold/globalcorstest/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {},
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "globalcorstest.default.1": {
            "_referenced_by": {},
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v1",
            "config": {
                "cors": {
                    "methods": "POST, GET, OPTIONS",
                    "origins": "http://foo.example.com"
                }
            },
            "kind": "Module",
            "location": "globalcorstest.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "rkey": "globalcorstest.default.1",
            "serialization": "ambassador_id: globalcorstest\napiVersion: ambassador/v1\nconfig:\n  cors:\n    methods: POST, GET, OPTIONS\n    origins: http://foo.example.com\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: globalcorstest\n  scope: AmbassadorTest\nname: ambassador\n"
        },
        "globalcorstest.default.2": {
            "_referenced_by": {},
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v1",
            "kind": "Mapping",
            "location": "globalcorstest.default.2",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest-http-foo",
            "namespace": "default",
            "prefix": "/foo/",
            "rkey": "globalcorstest.default.2",
            "serialization": "ambassador_id: globalcorstest\napiVersion: ambassador/v1\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: globalcorstest\n  scope: AmbassadorTest\nname: globalcorstest-http-foo\nprefix: /foo/\nservice: globalcorstest-http\n",
            "service": "globalcorstest-http"
        },
        "globalcorstest.default.3": {
            "_referenced_by": {},
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v1",
            "cors": {
                "methods": "POST, GET, OPTIONS",
                "origins": "http://bar.example.com"
            },
            "kind": "Mapping",
            "location": "globalcorstest.default.3",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest-http-bar",
            "namespace": "default",
            "prefix": "/bar/",
            "rkey": "globalcorstest.default.3",
            "serialization": "ambassador_id: globalcorstest\napiVersion: ambassador/v1\ncors:\n  methods: POST, GET, OPTIONS\n  origins: http://bar.example.com\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: globalcorstest\n  scope: AmbassadorTest\nname: globalcorstest-http-bar\nprefix: /bar/\nservice: globalcorstest-http\n",
            "service": "globalcorstest-http"
        },
        "k8s-globalcorstest-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-globalcorstest-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest",
                "service": "globalcorstest-admin"
            },
            "name": "globalcorstest-admin",
            "namespace": "default",
            "rkey": "k8s-globalcorstest-admin-default",
            "serialization": "ambassador_id: globalcorstest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: globalcorstest\n  scope: AmbassadorTest\n  service: globalcorstest-admin\nname: globalcorstest-admin\nnamespace: default\n"
        },
        "k8s-globalcorstest-default": {
            "_referenced_by": {},
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-globalcorstest-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest",
            "namespace": "default",
            "rkey": "k8s-globalcorstest-default",
            "serialization": "ambassador_id: globalcorstest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: globalcorstest\n  scope: AmbassadorTest\nname: globalcorstest\nnamespace: default\n"
        },
        "k8s-globalcorstest-http-default": {
            "_referenced_by": {},
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-globalcorstest-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest-http",
            "namespace": "default",
            "rkey": "k8s-globalcorstest-http-default",
            "serialization": "ambassador_id: globalcorstest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: globalcorstest\n  scope: AmbassadorTest\nname: globalcorstest-http\nnamespace: default\n"
        }
    },
    "mappings": {
        "globalcorstest-http-bar": {
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v1",
            "cors": {
                "methods": "POST, GET, OPTIONS",
                "origins": "http://bar.example.com"
            },
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest-http-bar",
            "namespace": "default",
            "prefix": "/bar/",
            "service": "globalcorstest-http"
        },
        "globalcorstest-http-foo": {
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v1",
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest-http-foo",
            "namespace": "default",
            "prefix": "/foo/",
            "service": "globalcorstest-http"
        }
    },
    "modules": {
        "ambassador": {
            "apiVersion": "getambassador.io/v1",
            "cors": {
                "methods": "POST, GET, OPTIONS",
                "origins": "http://foo.example.com"
            },
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default"
        }
    },
    "service": {
        "k8s-globalcorstest-admin-default": {
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest",
                "service": "globalcorstest-admin"
            },
            "name": "globalcorstest-admin",
            "namespace": "default"
        },
        "k8s-globalcorstest-default": {
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest",
            "namespace": "default"
        },
        "k8s-globalcorstest-http-default": {
            "ambassador_id": "globalcorstest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "globalcorstest",
                "scope": "AmbassadorTest"
            },
            "name": "globalcorstest-http",
            "namespace": "default"
        }
    }
}
