python/tests/gold/globalcorstest/snapshots/econf.json
{
    "static_resources": {
        "clusters": [
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_127_0_0_1_8877",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "127.0.0.1",
                                                "port_value": 8877,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_127_0_0_1_8877",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_globalcorstest_http",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "globalcorstest-http.default",
                                                "port_value": 80,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_globalcorstest_http",
                "type": "STRICT_DNS"
            }
        ],
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0",
                        "port_value": 8080,
                        "protocol": "TCP"
                    }
                },
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "config": {
                                    "access_log": [
                                        {
                                            "config": {
                                                "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                                                "path": "/dev/fd/1"
                                            },
                                            "name": "envoy.file_access_log"
                                        }
                                    ],
                                    "http_filters": [
                                        {
                                            "name": "envoy.cors"
                                        },
                                        {
                                            "name": "envoy.router"
                                        }
                                    ],
                                    "http_protocol_options": {
                                        "accept_http_10": false
                                    },
                                    "normalize_path": true,
                                    "route_config": {
                                        "virtual_hosts": [
                                            {
                                                "domains": [
                                                    "*"
                                                ],
                                                "name": "backend",
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/check_ready",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877",
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "http://foo.example.com"
                                                                ],
                                                                "filter_enabled": {
                                                                    "default_value": {
                                                                        "denominator": "HUNDRED",
                                                                        "numerator": 100
                                                                    },
                                                                    "runtime_key": "routing.cors_enabled.b4db12f5b638f1750062dd4220911c4f6f44fc57"
                                                                }
                                                            },
                                                            "prefix_rewrite": "/ambassador/v0/check_ready",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/check_alive",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877",
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "http://foo.example.com"
                                                                ],
                                                                "filter_enabled": {
                                                                    "default_value": {
                                                                        "denominator": "HUNDRED",
                                                                        "numerator": 100
                                                                    },
                                                                    "runtime_key": "routing.cors_enabled.7df546235997704c909d473af2cbcb5e606d20de"
                                                                }
                                                            },
                                                            "prefix_rewrite": "/ambassador/v0/check_alive",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877",
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "http://foo.example.com"
                                                                ],
                                                                "filter_enabled": {
                                                                    "default_value": {
                                                                        "denominator": "HUNDRED",
                                                                        "numerator": 100
                                                                    },
                                                                    "runtime_key": "routing.cors_enabled.8de18501d2044fe30db225289b318d5fda913b64"
                                                                }
                                                            },
                                                            "prefix_rewrite": "/ambassador/v0/",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/foo/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_globalcorstest_http",
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "http://foo.example.com"
                                                                ],
                                                                "filter_enabled": {
                                                                    "default_value": {
                                                                        "denominator": "HUNDRED",
                                                                        "numerator": 100
                                                                    },
                                                                    "runtime_key": "routing.cors_enabled.3644d75eb336f323bec43e48d4cfd8a950157607"
                                                                }
                                                            },
                                                            "prefix_rewrite": "/",
                                                            "priority": null,
                                                            "timeout": "3.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/bar/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_globalcorstest_http",
                                                            "cors": {
                                                                "allow_methods": "POST, GET, OPTIONS",
                                                                "allow_origin": [
                                                                    "http://bar.example.com"
                                                                ],
                                                                "filter_enabled": {
                                                                    "default_value": {
                                                                        "denominator": "HUNDRED",
                                                                        "numerator": 100
                                                                    },
                                                                    "runtime_key": "routing.cors_enabled.921ecb432880c4633171b07054553f9f567839ad"
                                                                }
                                                            },
                                                            "prefix_rewrite": "/",
                                                            "priority": null,
                                                            "timeout": "3.000s"
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    },
                                    "server_name": "envoy",
                                    "stat_prefix": "ingress_http",
                                    "use_remote_address": true,
                                    "xff_num_trusted_hops": 0
                                },
                                "name": "envoy.http_connection_manager"
                            }
                        ],
                        "use_proxy_proto": false
                    }
                ],
                "name": "ambassador-listener-8080"
            }
        ]
    }
}
